# stx-html-example

./: .gitignore  CLAUDE.md  book.py  pyproject.toml  render.yaml
.claude/: CLAUDE.md.j2  settings.json
.claude/commands/: stx-guide.md
.claude/commands/designer/: slide-audit.md  slide-fix.md  slide-new.md
.claude/commands/project/: project-init.md
.claude/commands/stx-coherence/: audit.md  fix.md
.claude/commands/stx-deploy/: configure-domain.md  deploy-batch.md  deploy.md  install-coolify.md  preflight.md  provision.md  scale.md  secure.md  setup-loadbalancer.md  status.md  update.md
.claude/commands/stx-designer/: audit.md  block-new.md  fix.md  init.md  tool.md  update.md
.claude/commands/stx-export/: html.md
.claude/commands/stx-import/: html-audit.md  html-batch.md  html-block.md  html.md  marp-analyze.md  marp.md
.claude/commands/stx-issue/: bug.md  comment.md  docs.md  feature.md  list.md  question.md
.claude/commands/stx-migration/: html-convert-batch.md  html-export.md
.claude/commands/stx-project/: collection-new.md  course-generate.md  issue.md  project-customize.md  project-init.md  project-upgrade.md
.claude/custom/: README.md
.claude/designer/agents/: project-architect.md  slide-designer.md
.claude/designer/skills/: block-blueprints.md  slide-design-rules.md  streamtex-quick-reference.md  (+1 more)
.claude/references/: coding_standards.md  presentation_cheatsheet_en.md  streamtex_cheatsheet_en.md
.streamlit/: config.toml
blocks/: bck_showcase_music.py  bck_showcase_text_generation_all.py
custom/: styles.py  themes.py
(+7 files in other folders)
