[project]
name = "stx-html-example"
version = "1.0.0"
description = "HTML migration example built with StreamTeX"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = ["streamtex[ai,inspector,pdf]>=0.3.0"]

[dependency-groups]
dev = ["pytest>=7.0", "ruff>=0.4.0", "pre-commit>=3.0"]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
streamtex = { path = "../../streamtex", editable = true }

[tool.ruff.lint]
ignore = ["F403", "F405", "E701", "E741"]

[tool.pyright]
extraPaths = ["../../streamtex"]
